# opshero-cli

./: .gitignore  LICENSE  PUBLISH.md  README.md  pyproject.toml  test_connection.py
opshero/: api.py  config.py  main.py
opshero/commands/: analyze.py  contribute.py  history.py  patterns.py  rerun.py
opshero/opshero/: api.py  config.py  local_engine.py  main.py  tier.py
opshero/opshero/commands/: analyze.py  apply.py  auth.py  sync.py  team.py
